correction to bootstrap center align

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -18,9 +18,7 @@
 .navbar-brand a:hover , .navbar-brand a:active{
 	text-decoration: none;
 }
-#main-content{
-	text-align: center;
-}
+
 #chicken{
 	background-color: gray;
 	margin-bottom:100px;
